samples: nrf5340: Empty firmware for application core
Sometimes there is a need to run software purely on the network core
(mostly for testing and debugging purposes). This sample can be used
to run something on the network core when there is no need for
working application core.

Signed-off-by: Dominik Kilian <Dominik.Kilian@nordicsemi.no>
Signed-off-by: Bartosz Gentkowski <bartosz.gentkowski@nordicsemi.no>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -82,6 +82,8 @@ Kconfig*                                  @SebastianBoe
 /samples/mpsl/**/*.rst                    @b-gent
 /samples/nfc/                             @grochu
 /samples/nfc/**/README.rst                @b-gent
+/samples/nrf5340/empty_app_core/          @doki-nordic
+/samples/nrf5340/**/README.rst            @b-gent
 /samples/nrf9160/                         @rlubos @lemrey
 /samples/nrf9160/spm/                     @lemrey @hakonfam @ioannisg
 /samples/profiler/                        @pdunaj @pizi-nordic
