--- a/samples/bluetooth/peripheral_uart_nrf53/cpuapp/prj.conf
+++ b/samples/bluetooth/peripheral_uart_nrf53/cpuapp/prj.conf
@@ -32,3 +32,6 @@ CONFIG_DK_LIBRARY=y
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 CONFIG_RPMSG_MASTER=y
+
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_DEBUG_INFO=y
