--- a/samples/bluetooth/peripheral_uart_nrf53/cpunet/Kconfig
+++ b/samples/bluetooth/peripheral_uart_nrf53/cpunet/Kconfig
@@ -10,7 +10,7 @@ menu "Nordic UART BLE GATT service application core sample"
 
 config BT_GATT_NUS_SECURITY_ENABLED
 	bool "Enable security"
-	default y
+	default n
 	select BT_SMP
 	help
 	  "Enable BLE security for the UART service"
