First working rp_trans experiment

--- a/samples/bluetooth/peripheral_uart_nrf53/cpuapp/prj.conf
+++ b/samples/bluetooth/peripheral_uart_nrf53/cpuapp/prj.conf
@@ -13,7 +13,7 @@ CONFIG_GPIO=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 
-CONFIG_HEAP_MEM_POOL_SIZE=2048
+CONFIG_HEAP_MEM_POOL_SIZE=8192
 
 CONFIG_IPM=y
 CONFIG_IPM_NRFX=y
@@ -33,5 +33,6 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 CONFIG_RPMSG_MASTER=y
 
-CONFIG_NO_OPTIMIZATIONS=y
-CONFIG_DEBUG_INFO=y
+
+#CONFIG_NO_OPTIMIZATIONS=y
+#CONFIG_DEBUG_INFO=y
