--- a/samples/bluetooth/peripheral_uart_nrf53/cpunet/prj.conf
+++ b/samples/bluetooth/peripheral_uart_nrf53/cpunet/prj.conf
@@ -26,7 +26,7 @@ CONFIG_NCS_SAMPLES_DEFAULTS=y
 # This example requires more workqueue stack
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
-CONFIG_HEAP_MEM_POOL_SIZE=2048
+CONFIG_HEAP_MEM_POOL_SIZE=4096
 
 CONFIG_ASSERT=n
 
@@ -41,5 +41,6 @@ CONFIG_IPM_MSG_CH_0_TX=y
 CONFIG_OPENAMP=y
 CONFIG_TINYCBOR=y
 
-CONFIG_NO_OPTIMIZATIONS=y
-CONFIG_DEBUG_INFO=y
+
+#CONFIG_NO_OPTIMIZATIONS=y
+#CONFIG_DEBUG_INFO=y
