--- a/subsys/CMakeLists.txt
+++ b/subsys/CMakeLists.txt
@@ -40,3 +40,5 @@ add_subdirectory_ifdef(CONFIG_SHELL_BT_NUS	shell)
 
 add_subdirectory(debug)
 add_subdirectory(partition_manager)
+
+add_subdirectory_ifdef(CONFIG_RP_SERIALIZATION serialization)
