--- a/subsys/serialization/CMakeLists.txt
+++ b/subsys/serialization/CMakeLists.txt
@@ -5,7 +5,9 @@
 #
 
 zephyr_include_directories(include)
+zephyr_include_directories(transport)
 
 zephyr_library()
 zephyr_library_sources(rp_os.c)
-
+zephyr_library_sources_ifdef(CONFIG_RMPSG_TRANSPORT transport/trans_rpmsg.c)
+zephyr_library_sources_ifdef(CONFIG_RMPSG_TRANSPORT transport/rp_ll.c)
