serialization: Checkout nrfxlib on serialization PR
Signed-off-by: Kamil Gawor <Kamil.Gawor@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -69,7 +69,7 @@ manifest:
       revision: 30b7efa827b04d2e47840716b0372737fe7d6c92
     - name: nrfxlib
       path: nrfxlib
-      revision: 037cb2339ef13e71f0600fcc111700efaf799d08
+      revision: pull/149/head
     - name: cmock
       path: test/cmock
       revision: c243b9a7a7b3c471023193992b46cf1bd1910450
