nrf_rpc: Thread pool changes 1

--- a/subsys/CMakeLists.txt
+++ b/subsys/CMakeLists.txt
@@ -41,4 +41,4 @@ add_subdirectory_ifdef(CONFIG_SHELL_BT_NUS	shell)
 add_subdirectory(debug)
 add_subdirectory(partition_manager)
 
-add_subdirectory_ifdef(CONFIG_RP_SERIALIZATION serialization)
+add_subdirectory_ifdef(CONFIG_NRF_RPC nrf_rpc)
