--- a/samples/serialization/entropy_nrf53/cpuapp/prj.conf
+++ b/samples/serialization/entropy_nrf53/cpuapp/prj.conf
@@ -10,5 +10,5 @@ CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_OPENAMP=y
 CONFIG_TINYCBOR=y
 
-CONFIG_RP_SERIALIZATION=y
+CONFIG_NRF_RPC=y
 CONFIG_RPMSG_MASTER=y
