--- a/subsys/nrf_rpc/CMakeLists.txt
+++ b/subsys/nrf_rpc/CMakeLists.txt
@@ -9,6 +9,6 @@ zephyr_include_directories(transport)
 
 zephyr_library()
 
-zephyr_library_sources_ifdef(CONFIG_RPMSG_TRANSPORT transport/trans_rpmsg.c)
-zephyr_library_sources_ifdef(CONFIG_RPMSG_TRANSPORT transport/rp_ll.c)
+zephyr_library_sources_ifdef(CONFIG_NRF_RPC_TR_RPMSG transport/nrf_rpc_rpmsg.c)
+zephyr_library_sources_ifdef(CONFIG_NRF_RPC_TR_RPMSG transport/rp_ll.c)
 
