nrf_rpc: Thread pool changes 5

--- a/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
+++ b/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
@@ -14,3 +14,12 @@ CONFIG_NRF_RPC=y
 CONFIG_RPMSG_MASTER=y
 
 CONFIG_THREAD_CUSTOM_DATA=y
+
+CONFIG_NRF_RPC_LOCAL_THREAD_POOL_SIZE=3
+CONFIG_NRF_RPC_REMOTE_THREAD_POOL_SIZE=2
+CONFIG_NRF_RPC_EXTRA_EP_COUNT=5
+CONFIG_NRF_RPC_REMOTE_EXTRA_EP_COUNT=5
+CONFIG_NRF_RPC_LOCAL_THREAD_STACK_SIZE=2048
+
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_DEBUG=y
