--- a/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
+++ b/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
@@ -21,5 +21,11 @@ CONFIG_NRF_RPC_EXTRA_EP_COUNT=5
 CONFIG_NRF_RPC_REMOTE_EXTRA_EP_COUNT=5
 CONFIG_NRF_RPC_LOCAL_THREAD_STACK_SIZE=2048
 
-CONFIG_NO_OPTIMIZATIONS=y
+#CONFIG_NO_OPTIMIZATIONS=y
+#CONFIG_DEBUG=y
+CONFIG_SIZE_OPTIMIZATIONS=y
 CONFIG_DEBUG=y
+
+CONFIG_NRF_RPC_LOG_LEVEL_DBG=y
+CONFIG_NRF_RPC_TR_LOG_LEVEL_DBG=y
+CONFIG_LOG=y
