--- a/samples/nrf_rpc/entropy_nrf53/cpunet/prj.conf
+++ b/samples/nrf_rpc/entropy_nrf53/cpunet/prj.conf
@@ -26,3 +26,7 @@ CONFIG_NRF_RPC_LOCAL_THREAD_STACK_SIZE=2048
 
 CONFIG_NO_OPTIMIZATIONS=y
 CONFIG_DEBUG=y
+
+CONFIG_NRF_RPC_LOG_LEVEL_DBG=y
+CONFIG_NRF_RPC_TR_LOG_LEVEL_DBG=y
+CONFIG_LOG=y
