nrf_rpc: Remote Procedure Calls for nRF SoCs
Multicore architectures in nRF SoCs requires to create a simple and
common way of communication between cores. nRF_RPC allows to create
API that can be called on one side and executed on the other.

Ref: NCSDK-5027

Signed-off-by: Dominik Kilian <Dominik.Kilian@nordicsemi.no>
Signed-off-by: Kamil Gawor <Kamil.Gawor@nordicsemi.no>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -72,6 +72,7 @@ Kconfig*                                  @tejlmand
 /samples/esb/                             @lemrey
 /samples/mpsl/                            @joerchan @rugeGerritsen
 /samples/nfc/                             @grochu
+/samples/nrf_rpc/                         @doki-nordic @KAGA164
 /samples/nrf5340/empty_app_core/          @doki-nordic
 /samples/nrf9160/                         @rlubos @lemrey
 /samples/nrf9160/spm/                     @lemrey @hakonfam @ioannisg
@@ -97,6 +98,7 @@ Kconfig*                                  @tejlmand
 /subsys/mpsl/                             @joerchan @rugeGerritsen
 /subsys/net/                              @rlubos
 /subsys/nfc/                              @grochu @anangl
+/subsys/nrf_rpc/                          @doki-nordic @KAGA164
 /subsys/partition_manager/                @hakonfam
 /subsys/profiler/                         @pdunaj
 /subsys/shell/                            @nordic-krch
