--- a/west.yml
+++ b/west.yml
@@ -97,7 +97,7 @@ manifest:
     - name: nrfxlib
       repo-path: sdk-nrfxlib
       path: nrfxlib
-      revision: 3eed8cbd8f6b0fa38aaa6b7d5d0e33bd7408f0d1
+      revision: pull/160/head
     # Other third-party repositories.
     - name: cmock
       path: test/cmock
