nrf_rpc: Remote Procedure Calls for nRF SoCs
Multicore architectures in nRF SoCs requires to create a simple and
common way of communication between cores. nRF_RPC allows to create
API that can be called on one side and executed on the other.

Ref: NCSDK-5027

Signed-off-by: Dominik Kilian <Dominik.Kilian@nordicsemi.no>
Signed-off-by: Kamil Gawor <Kamil.Gawor@nordicsemi.no>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -85,6 +85,8 @@ Kconfig*                                  @tejlmand
 /samples/mpsl/**/*.rst                    @b-gent
 /samples/nfc/                             @grochu
 /samples/nfc/**/README.rst                @b-gent
+/samples/nrf_rpc/                         @doki-nordic @KAGA164
+/samples/nrf_rpc/**/README.rst            @b-gent
 /samples/nrf5340/empty_app_core/          @doki-nordic
 /samples/nrf5340/**/README.rst            @b-gent
 /samples/nrf9160/                         @rlubos @lemrey
@@ -114,6 +116,7 @@ Kconfig*                                  @tejlmand
 /subsys/mpsl/                             @joerchan @rugeGerritsen
 /subsys/net/                              @rlubos
 /subsys/nfc/                              @grochu @anangl
+/subsys/nrf_rpc/                          @doki-nordic @KAGA164
 /subsys/partition_manager/                @hakonfam
 /subsys/profiler/                         @pdunaj
 /subsys/shell/                            @nordic-krch
