--- a/samples/nrf5340/empty_app_core/sample.yaml
+++ b/samples/nrf5340/empty_app_core/sample.yaml
@@ -1,6 +1,6 @@
 sample:
   name: Empty firmware for application core
-  description: Minimal Zephyr configuration sample that starts Network core and suspends CPU.
+  description: Minimal Zephyr configuration sample that only suspends CPU.
 tests:
   test_build:
     build_only: true
