samples: BLE NUS nrf53 align to nrf_rpc
This commit provides aligment of BLE UART sample
for nrf53 to new serialization API

Signed-off-by: Kamil Gawor <Kamil.Gawor@nordicsemi.no>

--- a/samples/bluetooth/peripheral_uart_nrf53/cpuapp/prj.conf
+++ b/samples/bluetooth/peripheral_uart_nrf53/cpuapp/prj.conf
@@ -31,6 +31,7 @@ CONFIG_DK_LIBRARY=y
 # This example requires more workqueue stack
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
-CONFIG_RP_SERIALIZATION=y
+CONFIG_NRF_RPC=y
+CONFIG_NRF_RPC_CBOR=y
 CONFIG_RPMSG_MASTER=y
-CONFIG_LINKER_ORPHAN_SECTION_PLACE=y
+CONFIG_THREAD_CUSTOM_DATA=y
