--- a/samples/bluetooth/peripheral_uart_nrf53/cpunet/prj.conf
+++ b/samples/bluetooth/peripheral_uart_nrf53/cpunet/prj.conf
@@ -41,5 +41,7 @@ CONFIG_IPM_MSG_CH_0_TX=y
 CONFIG_OPENAMP=y
 CONFIG_TINYCBOR=y
 
-CONFIG_RP_SERIALIZATION=y
-CONFIG_LINKER_ORPHAN_SECTION_PLACE=y
+CONFIG_NRF_RPC=y
+CONFIG_NRF_RPC_CBOR=y
+CONFIG_RPMSG_REMOTE=y
+CONFIG_THREAD_CUSTOM_DATA=y
