--- a/subsys/CMakeLists.txt
+++ b/subsys/CMakeLists.txt
@@ -39,5 +39,7 @@ endif()
 add_subdirectory_ifdef(CONFIG_FW_INFO	fw_info)
 add_subdirectory_ifdef(CONFIG_SHELL_BT_NUS	shell)
 
+add_subdirectory_ifdef(CONFIG_NRF_RPC nrf_rpc)
+
 add_subdirectory(debug)
 add_subdirectory(partition_manager)
