nrf_rpc: Removed endpoint concept
Reducing some flexibility of transport implementation allowed
removing endpoint concept and also simplify the code.

Ref: NCSDK-5027

Signed-off-by: Dominik Kilian <Dominik.Kilian@nordicsemi.no>

--- a/subsys/nrf_rpc/CMakeLists.txt
+++ b/subsys/nrf_rpc/CMakeLists.txt
@@ -5,9 +5,9 @@
 #
 
 zephyr_include_directories(include)
-zephyr_include_directories(transport)
 
 zephyr_library()
 
-zephyr_library_sources_ifdef(CONFIG_NRF_RPC_TR_RPMSG transport/nrf_rpc_rpmsg.c)
-zephyr_library_sources_ifdef(CONFIG_NRF_RPC_TR_RPMSG transport/rp_ll.c)
+zephyr_library_sources(nrf_rpc_os.c)
+zephyr_library_sources_ifdef(CONFIG_NRF_RPC_TR_RPMSG nrf_rpc_rpmsg.c)
+zephyr_library_sources_ifdef(CONFIG_NRF_RPC_TR_RPMSG rp_ll.c)
