--- a/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
+++ b/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
@@ -15,9 +15,13 @@ CONFIG_BOARD_ENABLE_CPUNET=y
 
 CONFIG_NRF_RPC=y
 CONFIG_NRF_RPC_CBOR=y
+CONFIG_NRF_RPC_THREAD_STACK_SIZE=4096
 
-CONFIG_NRF_RPC_LOCAL_THREAD_POOL_SIZE=2
-CONFIG_NRF_RPC_REMOTE_THREAD_POOL_SIZE=2
-CONFIG_NRF_RPC_LOCAL_EXTRA_EP_COUNT=3
-CONFIG_NRF_RPC_REMOTE_EXTRA_EP_COUNT=3
-CONFIG_NRF_RPC_LOCAL_THREAD_STACK_SIZE=2048
+CONFIG_LOG=y
+CONFIG_NRF_RPC_LOG_LEVEL_INF=y
+CONFIG_NRF_RPC_TR_LOG_LEVEL_INF=y
+CONFIG_NRF_RPC_OS_LOG_LEVEL_INF=y
+
+# Uncommend to allow better debugging
+#CONFIG_NO_OPTIMIZATIONS=y
+#CONFIG_DEBUG=y
