--- a/subsys/nrf_rpc/Kconfig
+++ b/subsys/nrf_rpc/Kconfig
@@ -107,6 +107,10 @@ module = NRF_RPC_TR
 module-str = NRF_RPC_TR
 source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config"
 
+module = NRF_RPC_OS
+module-str = NRF_RPC_OS
+source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config"
+
 if NRF_RPC_CBOR
 
 module = NRF_RPC_CBOR
