nrf_rpc: Another review-based changes
Refactoring and group list checking.

Ref: NCSDK-5027

Signed-off-by: Dominik Kilian <Dominik.Kilian@nordicsemi.no>

--- a/samples/nrf_rpc/entropy_nrf53/cpunet/prj.conf
+++ b/samples/nrf_rpc/entropy_nrf53/cpunet/prj.conf
@@ -13,10 +13,18 @@ CONFIG_THREAD_CUSTOM_DATA=y
 CONFIG_ENTROPY_GENERATOR=y
 
 CONFIG_NRF_RPC=y
-CONFIG_NRF_RPC_CBOR=y
+CONFIG_NRF_RPC_CBOR=n
 
 CONFIG_NRF_RPC_LOCAL_THREAD_POOL_SIZE=2
 CONFIG_NRF_RPC_REMOTE_THREAD_POOL_SIZE=2
 CONFIG_NRF_RPC_LOCAL_EXTRA_EP_COUNT=3
 CONFIG_NRF_RPC_REMOTE_EXTRA_EP_COUNT=3
 CONFIG_NRF_RPC_LOCAL_THREAD_STACK_SIZE=2048
+
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_DEBUG=y
+
+CONFIG_LOG=y
+CONFIG_NRF_RPC_LOG_LEVEL_DBG=y
+CONFIG_NRF_RPC_TR_LOG_LEVEL_DBG=y
+CONFIG_NRF_RPC_OS_LOG_LEVEL_DBG=y
