--- a/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
+++ b/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
@@ -14,16 +14,10 @@ CONFIG_THREAD_CUSTOM_DATA=y
 CONFIG_BOARD_ENABLE_CPUNET=y
 
 CONFIG_NRF_RPC=y
-CONFIG_NRF_RPC_CBOR=n
+CONFIG_NRF_RPC_CBOR=y
 
-CONFIG_NRF_RPC_LOCAL_THREAD_POOL_SIZE=2
-CONFIG_NRF_RPC_REMOTE_THREAD_POOL_SIZE=2
-CONFIG_NRF_RPC_LOCAL_EXTRA_EP_COUNT=3
-CONFIG_NRF_RPC_REMOTE_EXTRA_EP_COUNT=3
-CONFIG_NRF_RPC_LOCAL_THREAD_STACK_SIZE=2048
-
-CONFIG_NO_OPTIMIZATIONS=y
-CONFIG_DEBUG=y
+#CONFIG_NO_OPTIMIZATIONS=y
+#CONFIG_DEBUG=y
 
 CONFIG_LOG=y
 CONFIG_NRF_RPC_LOG_LEVEL_DBG=y
