--- a/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
+++ b/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
@@ -15,6 +15,7 @@ CONFIG_BOARD_ENABLE_CPUNET=y
 
 CONFIG_NRF_RPC=y
 CONFIG_NRF_RPC_CBOR=y
+CONFIG_NRF_RPC_THREAD_STACK_SIZE=4096
 
 #CONFIG_NO_OPTIMIZATIONS=y
 #CONFIG_DEBUG=y
