--- a/samples/nrf_rpc/entropy_nrf53/cpunet/prj.conf
+++ b/samples/nrf_rpc/entropy_nrf53/cpunet/prj.conf
@@ -13,7 +13,8 @@ CONFIG_THREAD_CUSTOM_DATA=y
 CONFIG_ENTROPY_GENERATOR=y
 
 CONFIG_NRF_RPC=y
-CONFIG_NRF_RPC_CBOR=n
+CONFIG_NRF_RPC_CBOR=y
+CONFIG_NRF_RPC_THREAD_STACK_SIZE=4096
 
 CONFIG_NO_OPTIMIZATIONS=y
 CONFIG_DEBUG=y
