--- a/samples/nrf_rpc/entropy_nrf53/cpuapp/sample.yaml
+++ b/samples/nrf_rpc/entropy_nrf53/cpuapp/sample.yaml
@@ -2,7 +2,7 @@ sample:
   name: Entropy remote application core
   description: Entropy driver application core sample
 tests:
-  test_build:
+  samples.nrf_rpc.entropy_cpuapp:
     build_only: true
     build_on_all: true
     platform_whitelist: nrf5340pdk_nrf5340_cpuapp
