--- a/samples/nrf_rpc/entropy_nrf53/cpunet/sample.yaml
+++ b/samples/nrf_rpc/entropy_nrf53/cpunet/sample.yaml
@@ -2,7 +2,7 @@ sample:
   name: Entropy remote network core
   description: Entropy remote network core sample
 tests:
-  test_build:
+  samples.nrf_rpc.entropy_cpunet:
     build_only: true
     build_on_all: true
     platform_whitelist: nrf5340pdk_nrf5340_cpunet
