Speed test for custom RTT output

--- a/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
+++ b/samples/nrf_rpc/entropy_nrf53/cpuapp/prj.conf
@@ -25,3 +25,5 @@ CONFIG_NRF_RPC_OS_LOG_LEVEL_INF=y
 # Uncommend to allow better debugging
 #CONFIG_NO_OPTIMIZATIONS=y
 #CONFIG_DEBUG=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
